.provarCaches/00D5f000005vwGkEAI/objects/rstk__batchprocthread__c.object
<CustomObject>
    <description>batchprocthread__c</description>
    <fields>
        <fullName>rstk__asyncapexjobid__c</fullName>
        <label>AsyncApexJob ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__forsoapi__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Internal Use Only</inlineHelpText>
        <label>For SOAPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__processingstatus__c</fullName>
        <label>Processing Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued For Processing</fullName>
                </value>
                <value>
                    <fullName>Processing Completed</fullName>
                    <default>true</default>
                    <label>Processing Completed</label>
                </value>
                <value>
                    <fullName>Processing In Progress</fullName>
                    <isActive>false</isActive>
                    <label>Processing In Progress</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sydata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SYDATA - System Transaction Object</label>
        <referenceTo>rstk__sydata__c</referenceTo>
        <relationshipLabel>Batch Processor Threads</relationshipLabel>
        <relationshipName>batchprocthreads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydataids__c</fullName>
        <label>Sydata IDs</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Batch Processor Thread</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Processor Threads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>